--- a/server.cfg
+++ b/server.cfg
@@ -5,8 +5,8 @@ endpoint_add_udp "0.0.0.0:30120"
 sv_maxclients 3
 
 ## Você PODE editar o seguinte:
-sv_hostname "JUNNIN Framework by Junnin!"
-sets sv_projectName "[JUNNIN Framework]"
+sv_hostname "[CORE FRAMEWORK]"
+sets sv_projectName "Core framework"
 sets sv_projectDesc "Uma estrutura avançada de FiveM RP, incluindo empregos, gangues, moradia e muito mais!"
 sets tags "default, deployer, core"
 sets locale "pt-BR"
